[gd_scene load_steps=2 format=3 uid="uid://16fgwxdnqj60"]

[ext_resource type="Script" uid="uid://l0tfdwayrwp3" path="res://audio/audiom.gd" id="1_ihkrw"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer"]
bus = &"Music"
script = ExtResource("1_ihkrw")

[node name="TransitionTimer" type="Timer" parent="."]

[connection signal="finished" from="." to="." method="_on_finished"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
